--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Remini/Remini%20v3.7.673.202399888%20%28Mod1%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Remini.png"
+                    <img src="Remini.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -205,8 +205,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Picsart%20Photo%20Editor/Picsart%20v25.3.0%20%28PREMIUM%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Picsart.png"
-                        alt="Logo2" width="100px" height="100px">
+                    <img src="Picsart.png" alt="Logo2" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Picsart</h1>
@@ -215,8 +214,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Adobe%20Lightroom/Lightroom%20v9.4.1%20%28PREMIUM%29%20.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Adobe Lightroom.png"
-                        alt="Logo3" width="100px" height="100px">
+                    <img src="Adobe Lightroom.png" alt="Logo3" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Adobe Lightroom</h1>
@@ -225,8 +223,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/CapCut/v12.2.0/CapCut%20v12.2.0%20%28Pro%29.apk';">
                 <div class="app-icon">
-                    <img src="Capcut.png"
-                        alt="Logo4" width="100px" height="100px">
+                    <img src="Capcut.png" alt="Logo4" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Capcut</h1>
@@ -235,8 +232,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://play.liteapks.com/Snapseed/Snapseed-2.22.0.633363672.apk';">
                 <div class="app-icon">
-                    <img src="Snapseed.png"
-                        alt="Logo5" width="100px" height="100px">
+                    <img src="Snapseed.png" alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Snapseed</h1>
@@ -245,8 +241,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/TrebEdit/TrebEdit%20v3.5.12%20%28PREMIUM%29.apk';">
                 <div class="app-icon">
-                    <img src="Trebedit.png"
-                        alt="Logo5" width="100px" height="100px">
+                    <img src="Trebedit.png" alt="Logo6" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Trebedit</h1>
@@ -255,8 +250,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://cloud.liteapks.com/download/Pydroid%203/Pydroid%203%20%20%20v7.2%20(Premium).apk';">
                 <div class="app-icon">
-                    <img src="Pydroid 3.png"
-                        alt="Logo5" width="100px" height="100px">
+                    <img src="Pydroid 3.png" alt="Logo7" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Pydroid 3</h1>
