--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -3,62 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator IYR</title>
+    <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            background-color: GhostWhite;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .header {
-            background-color: rgba(45, 150, 45);
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            transition: 0.2s;
-            box-shadow: 0 0 5px rgba(45, 150, 45);
-            height: 55px;
-        }
-
-        .header h2 {
-            font-size: 22px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-        }
-
-        .header .menu {
-            display: flex;
-            margin-left: auto;
-        }
-
-        .header a {
-            font-size: 18px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            padding: 3px;
-            margin-right: 15px;
-            transition: 0.2s;
-        }
-
-        .header a:hover {
-            box-shadow: 0 0 3px rgba(0, 0, 0);
-            border-radius: 5px;
-            color: rgb(0, 10, 200);
-            text-decoration: underline;
-        }
-
-
-
         .calculatrice {
             margin-top: 40px;
             padding: 20px;
             border-radius: 15px;
             background-color: silver;
-            box-shadow: 0 0 1px silver;
             display: grid;
             width: 300px;
             height: 400px;
@@ -73,7 +25,6 @@
             border: none;
             border-radius: 10px;
             background-color: ghostwhite;
-            box-shadow: 0 0 1px ghostwhite;
             cursor: pointer;
             margin-bottom: 10px;
             padding-left: 2px;
@@ -86,7 +37,6 @@
         .calculatrice input[type="button"] {
             border-radius: 5px;
             background-color: GhostWhite;
-            box-shadow: 0 0 1px GhostWhite;
             border: 0;
             margin: 5px;
             padding: 7px;
