--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -4,54 +4,8 @@
 <head>
     <meta charset='utf-8'>
     <title>Colors And Code IYR</title>
+    <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            background-color: GhostWhite;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .header {
-            background-color: rgba(45, 150, 45);
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            transition: 0.2s;
-            box-shadow: 0 0 5px rgba(45, 150, 45);
-            height: 55px;
-        }
-
-        .header h2 {
-            font-size: 22px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-        }
-
-        .header .menu {
-            display: flex;
-            margin-left: auto;
-        }
-
-        .header a {
-            font-size: 18px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            padding: 3px;
-            margin-right: 15px;
-            transition: 0.2s;
-        }
-
-        .header a:hover {
-            box-shadow: 0 0 3px rgba(0, 0, 0);
-            border-radius: 5px;
-            color: rgb(0, 10, 200);
-            text-decoration: underline;
-        }
-
-
-
         .a1,
         .a2 {
             position: relative;
@@ -74,12 +28,9 @@
 
         .heading {
             display: grid;
-            place-items: center;
             width: 60%;
             margin: 20px auto;
-            color: black;
             background-color: silver;
-            box-shadow: 0 0 1px silver;
             border-radius: 15px;
             padding: 15px;
             font-size: 30px;
@@ -93,7 +44,6 @@
             border: 2px double black;
             background-color: LightGray;
             padding: 7px;
-            box-shadow: 0 0 1px LightGray;
         }
 
         #color-display:hover {
@@ -102,24 +52,23 @@
         }
 
         .Allcontent {
+            justify-items: center;
             margin: 20px auto;
-            width: 85%;
             padding: 25px;
+            width: 85%;
             border-radius: 15px;
             background-color: silver;
-            box-shadow: 0 0 1px silver;
         }
 
         .color-row {
-            display: ruby-text;
-            margin: 0;
+            display: flex;
+            flex-wrap: wrap;
         }
 
         .circle-name {
             background-color: lightgray;
-            box-shadow: 0 0 1px lightgray;
             border-radius: 10px;
-            margin: 2px;
+            margin: 0 4px;
         }
 
         .color-circle {
@@ -157,12 +106,10 @@
 
         .hr1 {
             border: 1px solid black;
-            box-shadow: 0 0 1px black;
         }
 
         .hr2 {
             border: 1px solid black;
-            box-shadow: 0 0 1px black;
         }
 
 
@@ -181,7 +128,6 @@
             height: 30px;
             border-radius: 5px;
             background-color: GhostWhite;
-            box-shadow: 0 0 1px ghostwhite;
             padding: 3px;
             border: silver;
 
@@ -200,7 +146,6 @@
             border-radius: 5px;
             border: 1px solid lightgray;
             background-color: GhostWhite;
-            box-shadow: 0 0 1px GhostWhite;
             transition: 0.2s
         }
 
@@ -221,7 +166,6 @@
             align-items: center;
             padding: 10px;
             background-color: lightgray;
-            box-shadow: 0 0 1px lightgray;
             border-radius: 10px;
         }
 
@@ -243,7 +187,6 @@
             border-radius: 5px;
             border: 1px solid LightGray;
             background-color: GhostWhite;
-            box-shadow: 0 0 1px GhostWhite;
         }
 
         .picked-color-name:hover {
@@ -259,18 +202,12 @@
             border: 1px solid LightGray;
             background-color: GhostWhite;
             transition: 0.2s;
-            box-shadow: 0 0 1px GhostWhite;
         }
 
         .picked-color button:hover {
             box-shadow: 0 0 3px black;
             color: rgba(45, 150, 45);
         }
-
-
-
-
-
     </style>
 </head>
 
