--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -3,59 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More Colors IYR</title>
+    <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            background-color: GhostWhite;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .header {
-            background-color: rgba(45, 150, 45);
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            transition: 0.2s;
-            box-shadow: 0 0 5px rgba(45, 150, 45);
-            height: 55px;
-        }
-
-        .header h2 {
-            font-size: 22px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-        }
-
-        .header .menu {
-            display: flex;
-            margin-left: auto;
-        }
-
-        .header a {
-            font-size: 18px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            padding: 3px;
-            margin-right: 15px;
-            transition: 0.2s;
-        }
-
-        .header a:hover {
-            box-shadow: 0 0 3px rgba(0, 0, 0);
-            border-radius: 5px;
-            color: rgb(0, 10, 200);
-            text-decoration: underline;
-        }
-
-
-
         hr {
             border: 1px solid black;
-            box-shadow: 0 0 1px black;
         }
 
         a {
@@ -80,7 +32,6 @@
             padding: 20px;
             border-radius: 15px;
             background-color: silver;
-            box-shadow: 0 0 1px silver;
         }
 
         .circle {
@@ -95,7 +46,6 @@
             font-weight: bolder;
             transition: 0.2s;
             background-color: lightgray;
-            box-shadow: 0 0 1px lightgray;
         }
 
 
@@ -126,12 +76,6 @@
                 width: 92px;
                 height: 92px;
                 margin: 4px;
-            }
-
-
-            .circle:hover {
-                transform: scale(1.1);
-                box-shadow: 0 0 3px black;
             }
         }
 
