--- a/index.html
+++ b/index.html
@@ -3,63 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil IYR</title>
+    <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            background-color: GhostWhite;
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .header {
-            background-color: rgba(45, 150, 45);
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            transition: 0.2s;
-            box-shadow: 0 0 5px rgba(45, 150, 45);
-            height: 55px;
-        }
-
-        .header h2 {
-            font-size: 20px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-        }
-
-        .header .menu {
-            display: flex;
-            margin-left: auto;
-        }
-
-        .header a {
-            font-size: 18px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            padding: 3px;
-            margin-right: 15px;
-            transition: 0.2s;
-        }
-
-        .header a:hover {
-            box-shadow: 0 0 3px rgba(0, 0, 0);
-            border-radius: 5px;
-            color: rgb(0, 10, 200);
-            text-decoration: underline;
-        }
-
-
         .main-content {
             text-align: center;
             margin-top: 20px;
             border-radius: 15px;
-            box-shadow: 0 0 1px silver;
             position: relative;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 20%;
             width: 60%;
             padding: 25px;
             background-color: silver;
@@ -78,17 +30,14 @@
             margin-bottom: 20px;
             border-radius: 15px;
             position: relative;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 4%;
             width: 90%;
             padding: 20px;
             background-color: silver;
-            box-shadow: 0 0 1px silver;
         }
 
         hr {
             border: 1px solid black;
-            box-shadow: 0 0 1px black;
         }
 
         .span1 {
@@ -105,7 +54,6 @@
 
         .app-info {
             background-color: lightgray;
-            box-shadow: 0 0 1px lightgray;
             display: flex;
             padding: 7px;
             border-radius: 10px;
