--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -208,6 +208,17 @@
             box-shadow: 0 0 3px black;
             color: rgba(45, 150, 45);
         }
+
+        @media screen and (max-width:600px) {
+            .heading {
+                width: 80%;
+            }
+
+            #color-display {
+                width: ;
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 
