--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <style>
         .main-content {
             text-align: center;
-            margin-top: 20px;
+            margin: 20px auto;
             border-radius: 15px;
-            position: relative;
-            left: 20%;
             width: 60%;
             padding: 25px;
             background-color: silver;
@@ -27,10 +25,8 @@
             font-size: 18px;
             text-align: left;
             margin-top: 20px;
-            margin-bottom: 20px;
+            margin: 20px auto;
             border-radius: 15px;
-            position: relative;
-            left: 4%;
             width: 90%;
             padding: 20px;
             background-color: silver;
@@ -80,20 +76,6 @@
         }
 
         @media screen and (max-width: 600px) {
-            .header {
-                height: 50px;
-            }
-
-            .header h2 {
-                font-size: 18px;
-            }
-
-            .header a {
-                font-size: 16px;
-                margin-left: 15px;
-                padding: 2px;
-            }
-
             .main-content {
                 width: 65%;
             }
