--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <div class="app-row">
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/Remini/Remini%20v3.7.673.202399888%20%28Mod1%29.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1m0ROZ22YtpiZSdayw0cm3CP_-tNJ3AhJ/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Remini.png" alt="Logo1" width="100px" height="100px">
                 </div>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/Picsart%20Photo%20Editor/Picsart%20v25.3.0%20%28PREMIUM%29.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1UWWrc1UyuKg85VBg-5p8g7tIH6c39BJV/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Picsart.png" alt="Logo2" width="100px" height="100px">
                 </div>
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/Adobe%20Lightroom/Lightroom%20v9.4.1%20%28PREMIUM%29%20.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1Yqxm_bQJ5m8-Ig1-wrDFkdk7gjASh3qo/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Adobe Lightroom.png" alt="Logo3" width="100px" height="100px">
                 </div>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/CapCut/v12.2.0/CapCut%20v12.2.0%20%28Pro%29.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1YZ4yQk92z0ImV3Pc42f1hf_E1lOhP-8A/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Capcut.png" alt="Logo4" width="100px" height="100px">
                 </div>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://play.liteapks.com/Snapseed/Snapseed-2.22.0.633363672.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1NmUqekmeAeXQ9qnkx3J4gePVN-2lpmxP/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Snapseed.png" alt="Logo5" width="100px" height="100px">
                 </div>
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.usercontent.google.com/download?id=1eRzo6BtlPIHlGL_uYtVV_SD20vlsaUvK&export=download&authuser=0';">
+                onclick="window.location.href='https://drive.google.com/file/d/1eRzo6BtlPIHlGL_uYtVV_SD20vlsaUvK/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Trebedit.png" alt="Logo6" width="100px" height="100px">
                 </div>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://dl.apkmodct.com/apps/pydroid-3-1-[apkmodct.com].apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1N4FYGCZ1PjH-94RAW_nSpyRIe9zk0C-7/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Pydroid 3.png" alt="Logo7" width="100px" height="100px">
                 </div>
@@ -202,7 +202,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/MT%20Manager/MT2.16.1-clone.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/13SfUc87FN8PUPnJa2PUwjHOKmVikxwga/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="Mt Manager.png" alt="Logo5" width="100px" height="100px">
                 </div>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/MT%20Manager/MT2.16.1-clone.apk';">
+                onclick="window.location.href='https://drive.google.com/file/d/1v60dOXRGyIAziBHmqzxPAh0Rj4SRsR7k/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="GameKey.png" alt="Logo5" width="100px" height="100px">
                 </div>
