--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
         </div>
         <div class="app-row">
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1H5DlmneJGRsA9_UCIlNxutuWePiBvT2Q/view?usp=drive_link';">
+                onclick="window.location.href='https://drive.google.com/file/d/1xuVQDHAicClm7dlPksBxW9H0EWcaOxhe/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="EnhancedIMG.png" alt="LogoIYR1" width="100px" height="100px">
+                    <img src="FlexiOptimizerIYR.png" alt="LogoIYR1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
-                    <h1>EnhancedIMG</h1>
+                    <h1>FlexiOptimizer</h1>
                 </div>
             </div>
             <div class="app-info"
