--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
                 </div>
             </div>
             <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1DQKPq2eJuIZsgwke44dnfgfHcoWHHO2P/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="ColorHex.webp" alt="LogoIYR3" width="100px" height="100px">
+                </div>
+                <div class="app-name">
+                    <h1>ColorHex</h1>
+                </div>
+            </div>
+            <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="exam.webp" alt="LogoIYR2" width="100px" height="100px">
@@ -215,11 +224,7 @@
                 </div>
             </div>
         </div>
-
-
     </div>
-
-
 </body>
 
 </html>
